// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`message-scroller demo > renders basic correctly 1`] = `
<div>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between"
    style="margin-bottom: 12px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-tag ant-tag-filled ant-tag-success css-var-root"
        >
          Following
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography ant-typography-secondary css-var-root"
        >
          <!---->
          Idle
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
    </div>
    <button
      class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
        enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
        entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
        leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
        leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
         Send 
      </span>
      <!---->
    </button>
  </div>
  <div
    class="ant-message-scroller css-var-root ant-message-scroller-css-var ant-message-scroller-rail-enabled"
    style="height: 320px; border: 1px solid var(--ant-color-border); border-radius: 14px; background: var(--ant-color-bg-container);"
  >
    <section
      aria-label="Conversation"
      class="ant-message-scroller-viewport"
      tabindex="0"
    >
      <div
        aria-live="polite"
        aria-relevant="additions text"
        class="ant-message-scroller-content"
        role="log"
      >
        <div
          data-message-id="message-1"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              What should the first release include?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-2"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Start with the smallest workflow that still feels complete.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-3"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Include streaming and recovery states too.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-4"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Yes — those states are what make a first version feel dependable.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-5"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              How should we present tool results?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-6"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Keep every result next to the action that produced it.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-7"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              What about actions that need confirmation?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-8"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Pause the run, explain the impact, and ask before continuing.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-9"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Can the transcript stay easy to navigate?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-10"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Follow the live edge by default, and let the rail carry you back through history.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
      </div>
    </section>
    <!---->
    <!---->
    <transition-stub
      appear="false"
      css="true"
      name="ant-message-scroller-back-to-bottom-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`message-scroller demo > renders controller correctly 1`] = `
<div>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between"
    style="margin-bottom: 12px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-tag ant-tag-filled ant-tag-success css-var-root"
        >
          Following
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography ant-typography-secondary css-var-root"
        >
          <!---->
           Quoted “Message 5” lives above the current position. 
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
            enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
            entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
            leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
            leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
             scrollToItem('message-5') 
          </span>
          <!---->
        </button>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
            enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
            entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
            leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
            leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
             scrollToEnd() 
          </span>
          <!---->
        </button>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
            enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
            entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
            leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
            leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
             setFollowing(true) 
          </span>
          <!---->
        </button>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ant-message-scroller css-var-root ant-message-scroller-css-var"
    style="height: 320px; border: 1px solid var(--ant-color-border); border-radius: 14px; background: var(--ant-color-bg-container);"
  >
    <section
      aria-label="Conversation"
      class="ant-message-scroller-viewport"
      tabindex="0"
    >
      <div
        aria-live="polite"
        aria-relevant="additions text"
        class="ant-message-scroller-content"
        role="log"
      >
        <div
          data-message-id="message-1"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 1: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-2"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 2: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-3"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 3: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-4"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 4: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-5"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 5: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-6"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 6: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-7"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 7: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-8"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 8: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-9"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 9: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-10"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 10: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-11"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 11: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-12"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Message 12: this turn can be reached from outside the transcript, without rendering a rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
      </div>
    </section>
    <!---->
    <!---->
    <transition-stub
      appear="false"
      css="true"
      name="ant-message-scroller-back-to-bottom-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`message-scroller demo > renders follow correctly 1`] = `
<div>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between"
    style="margin-bottom: 12px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-tag ant-tag-filled ant-tag-success css-var-root"
        >
          Following
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography ant-typography-secondary css-var-root"
        >
          <!---->
           followChange × 0
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
            enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
            entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
            leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
            leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
             Detach 
          </span>
          <!---->
        </button>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
            enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
            entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
            leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
            leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
             Send 
          </span>
          <!---->
        </button>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ant-message-scroller css-var-root ant-message-scroller-css-var ant-message-scroller-rail-enabled"
    style="height: 320px; border: 1px solid var(--ant-color-border); border-radius: 14px; background: var(--ant-color-bg-container);"
  >
    <section
      aria-label="Conversation"
      class="ant-message-scroller-viewport"
      tabindex="0"
    >
      <div
        aria-live="polite"
        aria-relevant="additions text"
        class="ant-message-scroller-content"
        role="log"
      >
        <div
          data-message-id="message-1"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Draft the release checklist.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-2"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Ship the smallest complete loop: send, stream, recover, navigate.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-3"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Where does recovery live?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-4"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Recovery belongs to the host: retry the request, then push the failed turn back in.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-5"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              How do we keep reading history calm?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-6"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Never move the viewport while the reader is detached — that is the whole contract.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-7"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              What drives the unread badge?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-8"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Count every message that arrives while you are detached, and clear it on re-entry.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-9"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Do we need our own scrollbar?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-message-id="message-10"
          style="padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              No. The viewport is native, so drag, inertia, and keyboard all work for free.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
      </div>
    </section>
    <!---->
    <!---->
    <transition-stub
      appear="false"
      css="true"
      name="ant-message-scroller-back-to-bottom-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`message-scroller demo > renders rail correctly 1`] = `
<div>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between"
    style="margin-bottom: 12px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-tag ant-tag-filled ant-tag-success css-var-root"
        >
          Following
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography ant-typography-secondary css-var-root"
        >
          <!---->
           railItemSelect: none
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </span>
      </div>
      <!---->
    </div>
    <span
      class="ant-typography ant-typography-secondary css-var-root"
    >
      <!---->
       Hover a tick to preview, click to jump. 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <div
    class="ant-message-scroller css-var-root ant-message-scroller-css-var ant-message-scroller-rail-enabled"
    style="height: 320px; border: 1px solid var(--ant-color-border); border-radius: 14px; background: var(--ant-color-bg-container);"
  >
    <section
      aria-label="Conversation"
      class="ant-message-scroller-viewport"
      tabindex="0"
    >
      <div
        aria-live="polite"
        aria-relevant="additions text"
        class="ant-message-scroller-content"
        role="log"
      >
        <div
          data-turn-id="turn-1"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              What should the first release include?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Start with the smallest workflow that still feels complete.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-turn-id="turn-2"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Include streaming and recovery states too.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Yes. Those states make the first version feel dependable.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-turn-id="turn-3"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              How should we present tool results?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Keep results close to the action that produced them.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-turn-id="turn-4"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              What about actions that need confirmation?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Pause the run, explain the impact, and ask before continuing.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-turn-id="turn-5"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Can the transcript stay easy to navigate?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Use the rail to jump between turns without losing your place.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-turn-id="turn-6"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Which node should a tick point at?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Any node the selector matches — a turn, a tool call, or a single message.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-turn-id="turn-7"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              What happens on a touch screen?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Tapping a tick pins the preview card until the reader taps outside the rail.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
        <div
          data-turn-id="turn-8"
          style="display: flex; flex-direction: column; gap: 8px; padding: 8px 16px;"
        >
          <div
            style="max-width: 78%; margin-inline-start: auto; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-primary-bg);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              How dense can the rail get?
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
          <div
            style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
          >
            <span
              class="ant-typography css-var-root"
            >
              <!---->
              Ticks shrink automatically so the whole conversation always fits the viewport.
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </span>
          </div>
        </div>
      </div>
    </section>
    <!---->
    <!---->
    <transition-stub
      appear="false"
      css="true"
      name="ant-message-scroller-back-to-bottom-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`message-scroller demo > renders semantic correctly 1`] = `
<div
  class="ant-message-scroller css-var-root ant-message-scroller-css-var ant-message-scroller-rail-enabled"
  data-v-ab108db8=""
  style="height: 320px; border: 1px solid var(--ant-color-border); border-radius: 14px; background: var(--ant-color-bg-container);"
>
  <section
    aria-label="Conversation"
    class="ant-message-scroller-viewport demo-message-scroller-viewport"
    style="padding: 4px 0px;"
    tabindex="0"
  >
    <div
      aria-live="polite"
      aria-relevant="additions text"
      class="ant-message-scroller-content"
      role="log"
    >
      <div
        data-message-id="message-1"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 1: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-2"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 2: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-3"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 3: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-4"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 4: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-5"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 5: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-6"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 6: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-7"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 7: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-8"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 8: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-9"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 9: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-10"
        data-v-ab108db8=""
        style="padding: 8px 16px;"
      >
        <div
          data-v-ab108db8=""
          style="padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 10: semantic slots make the transcript match any product theme.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
    </div>
  </section>
  <!---->
  <!---->
  <transition-stub
    appear="false"
    css="true"
    name="ant-message-scroller-back-to-bottom-motion"
    persisted="false"
  >
    <!---->
  </transition-stub>
</div>
`;

exports[`message-scroller demo > renders slots correctly 1`] = `
<div
  class="ant-message-scroller css-var-root ant-message-scroller-css-var ant-message-scroller-rail-enabled"
  style="height: 320px; border: 1px solid var(--ant-color-border); border-radius: 14px; background: var(--ant-color-bg-container);"
>
  <section
    aria-label="Conversation"
    class="ant-message-scroller-viewport"
    tabindex="0"
  >
    <div
      aria-live="polite"
      aria-relevant="additions text"
      class="ant-message-scroller-content"
      role="log"
    >
      <div
        data-message-id="message-1"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 1: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-2"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 2: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-3"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 3: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-4"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 4: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-5"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 5: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-6"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 6: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-7"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 7: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-8"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 8: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-9"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; margin-inline-start: auto; background: var(--ant-color-primary-bg);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 9: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
      <div
        data-message-id="message-10"
        style="padding: 8px 16px;"
      >
        <div
          style="max-width: 78%; padding: 8px 12px; border-radius: 12px; background: var(--ant-color-fill-secondary);"
        >
          <span
            class="ant-typography css-var-root"
          >
            <!---->
            Message 10: slot-driven navigation keeps the rail readable at any density.
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </span>
        </div>
      </div>
    </div>
  </section>
  <!---->
  <!---->
  <transition-stub
    appear="false"
    css="true"
    name="ant-message-scroller-back-to-bottom-motion"
    persisted="false"
  >
    <!---->
  </transition-stub>
</div>
`;
